api testing, reestructurado de steps

--- a/.cypress-cucumber-preprocessorrc.json
+++ b/.cypress-cucumber-preprocessorrc.json
@@ -8,10 +8,8 @@
       "output": "jsonlogs/messages.ndjson"
     },
     "stepDefinitions":[
-        "[filepath]/**/*.{js,ts}",
-        "[filepath].{js,ts}",
-        "cypress/e2e/step_definitions/*/*.{js,ts}"
-    ] 
+        "cypress/e2e/features/[filepath]/steps.{js,ts}"
+    ]
 }
 
  
