--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@badeball/cypress-cucumber-preprocessor": "^12.0.0",
     "@bahmutov/cypress-esbuild-preprocessor": "^2.1.3",
     "cypress": "^10.4.0",
-    "esbuild": "^0.14.53"
+    "esbuild": "^0.14.53",
+    "multiple-cucumber-html-reporter": "^1.21.6"
   }
 }
