--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "test_run_firefox": "cypress run --browser firefox --e2e",
     "test_run_chrome_headed": "cypress run --browser chrome --e2e --headed",
     "test_run_firefox_headed": "cypress run --browser firefox --e2e --headed",
-    "test_run_chrome_web": "cypress run -e TAGS='@web'"
+    "test_run_chrome_web": "cypress run -e TAGS='@web'",
+    "test_run_jjc": "cypress run -e TAGS='@JJC'"
   },
   "keywords": [
     "prueba",
@@ -23,6 +24,7 @@
   "devDependencies": {
     "@badeball/cypress-cucumber-preprocessor": "^12.0.0",
     "@bahmutov/cypress-esbuild-preprocessor": "^2.1.3",
+    "cucumber-html-reporter": "^5.5.0",
     "cypress": "^10.4.0",
     "esbuild": "^0.14.53",
     "multiple-cucumber-html-reporter": "^1.21.6"
