--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "test_run_chrome_headed": "cypress run --browser chrome --e2e --headed",
     "test_run_firefox_headed": "cypress run --browser firefox --e2e --headed",
     "test_run_chrome_web": "cypress run -e TAGS='@web'",
-    "test_run_jjc": "cypress run -e TAGS='@JJC'"
+    "test_run_full": "cypress run -e TAGS='@full'",
+    "dev": "npm run dev",
+    "test_run_starting_server": "start-server-and-test dev 3000 test_open"
   },
   "keywords": [
     "prueba",
@@ -22,11 +24,13 @@
   "author": "Gotar, Jesús Julio César",
   "license": "ISC",
   "devDependencies": {
+    "@applitools/eyes-cypress": "^3.27.1",
     "@badeball/cypress-cucumber-preprocessor": "^12.0.0",
     "@bahmutov/cypress-esbuild-preprocessor": "^2.1.3",
     "cucumber-html-reporter": "^5.5.0",
     "cypress": "^10.4.0",
     "esbuild": "^0.14.53",
-    "multiple-cucumber-html-reporter": "^1.21.6"
+    "multiple-cucumber-html-reporter": "^1.21.6",
+    "start-server-and-test": "^1.14.0"
   }
 }
